# ToMakeDesktop

./: .gitignore  CMakeCache.txt  CMakeLists.txt  WindowManager.c  cmake_install.cmake  main.c
dependencies/glfw/: cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw/src/: cmake_install.cmake  glfw3.pc
dependencies/leif/: leif.c
